--- a/cough_model.ipynb
+++ b/cough_model.ipynb
@@ -1126,17 +1126,16 @@
         "    Shift(min_fraction=-0.5, max_fraction=0.5, p=0.5),\n",
         "])\n",
         "\n",
-        "#/content/Agrenadier_Moat1.wav\n",
+        "os.mkdir(\"augmented_data\") #agmented data container\n",
+        "\n",
         "for audio_file in tqdm(covid_TotData[\"DIR\"]):\n",
-        "  idx=0\n",
         "  try:\n",
         "    samples, sr = librosa.load(audio_file) #get audio file from dataset\n",
         "    augmented_sample = augment(samples=samples, sample_rate=sr)\n",
         "    sf.write(\"/content/augmented_data/\" + audio_file.split(\"/\")[-1][0:-5] + \".wav\", augmented_sample, sr) #write with wav extantion\n",
         "    print(\"\\nhi\")\n",
         "    augment_positive_samples = augment_positive_samples.append(covid_TotData.loc[covid_TotData['ID'] == str( audio_file.split(\"/\")[-1][0:-5])],ignore_index=True)\n",
-        "    if idx==5:\n",
-        "      break;\n",
+        "\n",
         "  except:\n",
         "    print(\"\\n Null File\") \n",
         "  idx=idx + 1\n",
